--- a/AndroidJavascriptBridge-master/AndroidManifest.xml
+++ b/AndroidJavascriptBridge-master/AndroidManifest.xml
@@ -71,7 +71,16 @@
 
         <service android:name="com.ehoo.sms.receiver.SMSReceiveService" >
         </service>
-                
+         
+           <!-- alipay sdk begin -->
+        <activity
+            android:name="com.alipay.sdk.app.H5PayActivity"
+            android:configChanges="orientation|keyboardHidden|navigation"
+            android:exported="false"
+            android:screenOrientation="behind"
+            android:windowSoftInputMode="adjustResize|stateHidden" >
+        </activity>
+        <!-- alipay sdk end -->
     </application>
 
 </manifest>
