--- a/AndroidJavascriptBridge-master/AndroidManifest.xml
+++ b/AndroidJavascriptBridge-master/AndroidManifest.xml
@@ -19,6 +19,7 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -77,7 +78,7 @@
             android:name="com.alipay.sdk.app.H5PayActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:exported="false"
-            android:screenOrientation="behind"
+            android:screenOrientation="landscape"
             android:windowSoftInputMode="adjustResize|stateHidden" >
         </activity>
         <!-- alipay sdk end -->
